Add Jost Variable font and restructure layout components

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,15 @@
+---
+import '@fontsource-variable/jost';
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="description" content="TODO">
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Portolio Kc</title>
 	</head>
 	<body>
 		<slot />
@@ -13,7 +17,10 @@
 </html>
 
 <style>
-	html,
+	html {	
+		background-color: white;
+		font-family: 'Jost Variable', sans-serif;
+	},
 	body {
 		margin: 0;
 		width: 100%;
