--- a/src/components/ExperienceComponent/ExperienceComponent.astro
+++ b/src/components/ExperienceComponent/ExperienceComponent.astro
@@ -1,56 +1,57 @@
 ---
+import { Icon } from 'astro-icon/components'
 import './ExperienceComponent.css'
 ---
 <div class="bento">
-    <div class="bento__item" style="grid-area: pro1; text-align: center">
-        <span>European <br> banks</span>
+    <div class="bento__item" style="grid-area: pro1;">
+        <span class="item-pro1">European <br> banks</span>
     </div>
     <div class="bento__item" style="grid-area: pro2">
-        4 Cientes satisfechos
+        <span class="item-pro2">4 Cientes satisfechos</span>
     </div>
     <div class="bento__item" style="grid-area: pro3">
-        Multitasking
+        <span class="item-pro3">Multitasking</span>
     </div>
     <div class="bento__item" style="grid-area: pro4">
-        Migration
+        <span class="item-pro4">Migration</span>
     </div>
     <div class="bento__item" style="grid-area: pro5">
-        <p>Technologies aplicadas</p>
+        <span class="item-pro4">Technologies aplicadas</p>
     </div>
-    <div class="bento__item" style="color:black;    grid-area: pro6">
-        <img src="favicon.svg" alt=""/>
+    <div class="bento__item" style="grid-area: pro6;">
+        <Icon name="angular" size=10 />
     </div>
     <div class="bento__item" style="grid-area: pro7">
-        <img src="favicon.svg" alt=""/>
+        <Icon name="react" size={100} />
     </div>
     <div class="bento__item" style="grid-area: pro8">
-        Inegration Arquitecture
+        <span class="item-pro8">Inegration Arquitecture</span>
     </div>
     <div class="bento__item" style="grid-area: pro9">
-        Accenture
+        <span class="item-pro9">Accenture</span>        
     </div>
     <div class="bento__item" style="grid-area: pro10">
-        +3 Años de expereriencia
+        <span class="item-pro10">+3 Años de expereriencia</span>        
     </div>
     <div class="bento__item" style="grid-area: pro11">
-        Frontend Developer
+        <span class="item-pro11">Frontend Developer</span>        
     </div>
     <div class="bento__item" style="grid-area: pro12">
-        TODO
+        <span class="item-pro12">Salesforce</span> 
     </div>
     <div class="bento__item" style="grid-area: pro13">
-        Microfrontends
+        <span class="item-pro13">Microfrontends</span> 
     </div>
     <div class="bento__item" style="grid-area: pro14">
-        Desarrollo de aplicaciones
+        <span class="item-pro14">Desarrollo de aplicaciones</span>
     </div>
     <div class="bento__item" style="grid-area: pro15">
-        Integraciones
+        <span class="item-pro15">Integraciones</span>
     </div>
     <div class="bento__item" style="grid-area: pro16">
-        Gestión de apis
+        <span class="item-pro16">Gestión de apis</span>
     </div>
     <div class="bento__item" style="grid-area: pro17">
-        App Developer
+        <span class="item-pro16">App Developer</span>
     </div>    
 </div>
