--- a/src/components/ExperienceComponent/ExperienceComponent.css
+++ b/src/components/ExperienceComponent/ExperienceComponent.css
@@ -1,4 +1,80 @@
 .bento{
+    display: grid;
+    grid-auto-rows: 50px;
+    gap: 4px;
+    grid-template-areas:
+        "pro9 pro9 pro9 pro9"
+        "pro9 pro9 pro9 pro9"
+        "pro10 pro11 pro11 pro11"
+        "pro10 pro8 pro17 pro17"
+        "pro1 pro2 pro3 pro3"
+        "pro6 pro12 pro7 pro7"
+        "pro6 pro14 pro7 pro7"
+        "pro5 pro5 pro5 pro13"
+        "pro5 pro5 pro5 pro4"
+        "pro5 pro5 pro5 pro16"
+        "pro5 pro5 pro5 pro15"
+        ;    
+}
+
+.bento__item{
+    
+    border: 2px solid rgb(96 139 168);
+    border-radius: 15px; 
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+@media (min-width: 600px){
+    .bento{
+        grid-template-areas: 
+        "pro11  pro11  pro7  pro7  pro8   pro8"
+        "pro11  pro11  pro7  pro7  pro12  pro12"
+        "pro17  pro6   pro6  pro6  pro6   pro13"
+        "pro10  pro10  pro9  pro9  pro9   pro14"
+        "pro10  pro10  pro9  pro9  pro9   pro3"
+        "pro15  pro15  pro15 pro15 pro15  pro16"
+        "pro5   pro5   pro5  pro5  pro1   pro2"
+        "pro5   pro5   pro5  pro5  pro4   pro4"
+        "pro5   pro5   pro5  pro5  pro4   pro4"
+        "pro5   pro5   pro5  pro5  pro4   pro4"
+    }
+    .bento__item{
+        padding: 10px;
+    }
+}
+
+@media (min-width: 900px){
+    .bento{
+        grid-template-areas: 
+        "pro1 pro1 pro1 pro2 pro6  pro6  pro7  pro7  pro8   pro8   pro8 "
+        "pro1 pro1 pro1 pro3 pro6  pro6  pro7  pro7  pro12  pro12  pro12 "
+        "pro4 pro4 pro4 pro4 pro9  pro9  pro9  pro9  pro9   pro13  pro14  "
+        "pro5 pro5 pro5 pro5 pro9  pro9  pro9  pro9  pro9   pro15  pro16 "
+        "pro5 pro5 pro5 pro5 pro10 pro10 pro11 pro11 pro17  pro17  pro17 "
+        "pro5 pro5 pro5 pro5 pro10 pro10 pro11 pro11 pro17  pro17  pro17 "
+    }
+}
+
+
+
+/* grid-template-areas:
+        "pro pro pro pro pro pro pro"
+        "pro pro pro pro pro pro pro"
+        "pro pro pro pro pro pro pro"
+        "pro pro pro pro pro pro pro"
+        "pro pro pro pro pro pro pro"
+        "pro pro pro pro pro pro pro"
+        "pro pro pro pro pro pro pro"
+        "pro pro pro pro pro pro pro"; */
+
+
+
+
+/* .bento{
     padding-bottom: 10rem;
     display: grid;
     gap: 4px;
@@ -13,6 +89,7 @@
     "pro5 pro5 pro5 pro9  pro9  pro9  pro9  pro9   pro15  pro16 "
     "pro5 pro5 pro5 pro10 pro10 pro11 pro11 pro17  pro17  pro17 "
     "pro5 pro5 pro5 pro10 pro10 pro11 pro11 pro17  pro17  pro17 "    
+    
 }
 
 .bento__item{
@@ -25,5 +102,6 @@
     
     text-align: center;
     font-weight: bold;
+    font-size: clamp(12px, 2vw, 24px); 
     
-}
+} */
