--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ import '@fontsource-variable/jost';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<title>Portolio Kc</title>
 	</head>
-	<body>
+	<body style="margin: 0; width: 100%; height: 100%;">
 		<slot />
 	</body>
 </html>
@@ -20,10 +20,5 @@ import '@fontsource-variable/jost';
 	html {	
 		background-color: white;
 		font-family: 'Jost Variable', sans-serif;
-	},
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
 	}
 </style>
