--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Footer from '../sections/Footer.astro';
 			<Experience/>
 			<!-- <TODO Technologies/> -->
 			<!-- <Projects/> -->
-			<!-- <Contact/> -->
+			<Contact/>
 		</div>
         <Footer/>
 	</main>
