--- a/src/components/ExperienceComponent/ExperienceComponent.css
+++ b/src/components/ExperienceComponent/ExperienceComponent.css
@@ -2,6 +2,8 @@
     display: grid;
     grid-auto-rows: 50px;
     gap: 4px;
+    
+    font-size: 0.8rem;
     grid-template-areas:
         "pro9 pro9 pro9 pro9"
         "pro9 pro9 pro9 pro9"
